1.8.10 - with upgraded to neon.2 jdt